[package]
name = "gamebot"
version = "0.1.0"
authors = ["'Jason King' <'chn.kei@gmail.com'>"]
edition = "2018"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elefren = { version = "0.22", features = ["toml"] }
